# LangDetect

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/api/: app.py
src/langDetect/: __init__.py  langDetect.py  logger.py
src/langDetect/models/shallow_model_v1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/langDetect/models/shallow_model_v1/variables/: variables.index
