[project]
name = "LangDetectApi"
version = "0.0.1"
dependencies = [
        "flask>=2.2.5",
        "tensorflow~=2.15.0",
        "setuptools~=69.1.1",
        "tqdm~=4.66.2",
        "python-dotenv~=1.0.1",
        "tf-keras==2.15.0"
        "tf-slim==1.1.0"
        "keras==2.15.0"
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
